# dzervit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dzervit-0.1.0.tgz  dzervit-0.1.1.tgz  dzervit-0.1.2.tgz  dzervit-0.1.3.tgz  dzervit-0.2.0.tgz  dzervit-0.3.10.tgz  dzervit-0.3.9.tgz  index.yaml  package-lock.json  package.json  webpack.config.js
.github/: FUNDING.yml  semver-increment.sh
.github/workflows/: build.yml  bump.yml  codeql-analysis.yml  deploy.yml  test.yml
chart/dzervit/: Chart.yaml  values.yaml
chart/dzervit/templates/: deployment.yaml  ingress.yaml  ingressroute.yaml  service.yaml
src/: main.rs
web/: App.jsx  index.html  index.js
web/components/: DZervit.jsx  Docs.jsx
