[package]
name = "dzervit"
version = "0.3.10"
authors = ["Dimitris Zervas <dzervas@dzervas.gr>"]
edition = "2018"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = ["rustls"] }
serde = { version = "1.0.183", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.8.0"
actix-test = { version = "0.1.1", features = ["rustls"] }
serde_json = "1.0.105"
