[package]
name = "dzervit"
version = "0.3.10"
authors = ["Dimitris Zervas <dzervas@dzervas.gr>"]
edition = "2018"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.1", features = ["rustls"] }
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.9.0"
actix-test = { version = "0.1.2", features = ["rustls"] }
serde_json = "1.0.111"
